<resources>
    <string name="hello">Hello World, TestNDKProjectActivity!</string>
    <string name="app_name">BonaFide +</string>
    <string name="protocol_name">Protocol Name</string>
    <string name="port1">Protocol Flow port</string>
    <string name="port2">Random Flow port</string>
    <string name="run_test">Run Test</string>
    <string name="run">Run Test</string>
    <string name="start_measurements">Start Measurements</string>
    <string name="network_failure_title">Network Failure</string>
    <string name="network_failure_text">This application requires a working Internet connection. Neither WiFi nor Mobile network is currently available.</string>
    <string name="server_down_failure_text">Can\'t retrieve the list of available protocol specifications. Perhaps the measurement server is down, try to connect later. Or check the measurement server connection parameters.</string>
    <string name="server_down_failure_title">Server not respond</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close_application">Close Application</string>
    <string name="smile_happy">:)</string>
    <string name="smile_unhappy">:(</string>
    <string name="protocol_spec_overview">Protocol Specification Overview</string>
    <string name="number_of_tests">\u2116 of Tests to run</string>
    <string name="start_description">To start measurements, please specify the number of tests to run and press the \"Start Measurements\" button. If you are using this application for the first time, it\'s highly recommended to read the \"About\" section (press Menu), especially paragraph 4.</string>
    <string name="connectivity_status">Test Internet connectivity....\t\t</string>
    <string name="initialize_status">Initialize app context....\t\t\t\t</string>
    <string name="server_status">Connect to server ....\t\t\t\t\t\t</string>
    <string name="number_of_tests_failure_title">Incorrect value provided</string>
    <string name="number_of_tests_failure_text">Can\'t start measurements. Wrong number of tests to run has been provided. The correct value should be in range from 3 to 15.</string>
    <string name="terminate_measurements">Terminate Test</string>
    <string name="terminated_toast">Measurement test has been terminated.</string>
    <string name="delete_results">Delete Results</string>
    <string name="upload_results">Upload Results</string>
    <string name="error_while_printing">Writing measurement test results onto SD card failed.</string>
    <string name="test_completed">Test completed. Measurement results have been stored to \"%s\" local file. You can share your results with us by pressing the \"Upload Results\" button below</string>
    <string name="result_uploaded">Measurement results has been uploaded. Thanks for your cooperation.</string>
    <string name="result_uploaded_fail">Error occur while uploading measurement test results.</string>
    <string name="file_deleted">File %s has been successfully deleted.</string>
    <string name="file_deleted_failed">Can\'t delete %s file.</string>
    <string name="delete_file_dialog">Are you sure that you want to delete %s file from SD-card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="no_results_found">No measurement test results found</string>
    <string name="upload_confirmation">Upload Confirmation</string>
    <string name="upload_file_dialog">You pressed \"Upload file\" button. %s file will be uploaded to our file storage, and collected data will be analyzed. Continue?</string>
    <string name="initialize_context_failure_title">Initialize Context Failure</string>
    <string name="initialize_context_failure_text">Error occur while initializing application context. Reason: SD card is not ready to use.</string>
    <string name="about">About</string>
    <string name="view_all_result">View all results</string>
    <string name="wait_until_test_complete">Please wait until the test is complete...</string>
    <string name="about_question_1">1. What is it?</string>
    <string name="about_answer_1">\tBonaFide Provider is an application that helps you to detect whether your Mobile Network Provider performs traffic differentiation. Your mobile provider might artificially limits a performance of certain type of traffic. For example the bandwidth for VoIP applications might be limited, in order to make using VoIP in mobile networks impossible. This application allows you to run a series of measurement tests to discover whether traffic throttling schemes were applied along the path.</string>
    <string name="about_question_2">2. Who are we?</string>
    <string name="about_answer_2">\tBonaFide Provider is a part of a research project of Computer Networks and Distributed Systems(CNDS) research group at Jacobs University Bremen. The main goal of this project is to collect and analyze the data from different mobile operators around the world, in order to learn whether and to which extend traffic shaping schemes are deployed in mobile networks. So, if you want to make a contribution to our research, you can submit your measurement results to us.</string>
    <string name="about_question_3">3. How does it work?</string>
    <string name="about_answer_3">\tBonaFide establishes a connection with our measurement server and generates two separate data flows. The first flow sends packets that carry randomly generated data. The second flow has exactly the same characteristics like the first one, but it carries packets that implement protocol that you want to test. The significant difference in those two flows performances might indicate that some traffic shaping policies were applied by a mobile provider along the path.</string>
    <string name="about_question_4">4. How to use it?</string>
    <string name="about_answer_4">\tFirst you need to specify the number of tests to execute. The actual channel performance in mobile networks is not a constant value and might change significantly during the time, especially in low-speed networks like EDGE. So, a single test execution will not be enough to make a conclusion about the traffic shaping existence along the path. To tolerate those errors it\'s highly recommended to increase the number of tests to run to 7-10 times. But keep in mind that you\'ll also increase the amount of data being transmitted during the tests. The total amount of data depends on the mobile network type that you are using. For example for the low-speed networks like EDGE one test consumes ~1 MB of data. For more faster network types like HSPA approximately 4MB of data is consumed. The measurement results are stored on SD card inside the BonaFide folder.</string>
    <string name="about_question_5">5. How to interpret measurement results?</string>
    <string name="about_answer_5">\tTest execution result file contains four tables: Download and Upload performances for Random and Protocol flows. Each table represents estimated channel bandwidth in some direction(upload or download) for messages of a different sizes. The bandwidth estimated for the biggest message size corresponds to an actual bandwidth of the link.\n\tNow you can compare corresponding values for Random and Protocol flows. And if the estimated bandwidth for a Protocol flow is always significantly lower than for a Random flow, than your mobile operator does some traffic shaping for a tested protocol type.\n\tN.B. The test result file also provides an information about the signal strength and network state changes during the test execution time. If the signal strength changes from the very low value(0-5 asu) to very high values(25-30) or vice versa, or even worse - the network disconnections were observed, the obtained results can\'t be treated as reliable anymore.</string>
    <string name="view_results">View Results</string>
    <string name="frontend_action_settings">Settings</string>
    <string name="frontend_action_search">Search in map</string>
    <string name="frontend_action_results">Measurement results</string>
    <string name="frontend_action_custom_measurement">Run custom measurement</string>
    <string name="frontend_action_overflow">Show other options</string>
    <string name="frontend_action_migration">Migration to another phone</string>
    <string name="frontend_action_privacy">Privacy</string>
    <string name="frontend_action_about">About BonaFide app</string>
    <string name="settings_group_central_server">Central server settings</string>
    <string name="settings_central_server_host">Service URL</string>
    <string name="settings_central_server_host_summary">This URL points to the central server REST interface</string>
    <string name="settings_central_server_host_dialog_title">Central server service URL</string>
    <string name="settings_central_server_host_dialog_message">Example: http://www.example.org/bonafide/</string>
    <string name="settings_central_user_token">Identification token</string>
    <string name="settings_central_user_token_summary">Token enables one to anonymously access own results, even from multiple devices. No personal informations are stored beside this token. If you use this application for the first time, let it empty, it will be automatically generated. If you attempt to transfer all measurement results to another device, paste this token into it.</string>
    <string name="settings_central_user_token_dialog_title">Identification token</string>
    <string name="settings_central_user_token_dialog_message">Edit only when transferring results from another device. Change to empty if you want to generate a new token.</string>
    <string name="settings_group_automeasurement">Automatic measurements</string>
    <string name="settings_automeasurement_status_active">Active</string>
    <string name="settings_automeasurement_status_inactive">Automatic measurements are inactive</string>
    <string name="settings_automeasurement_treshold_time">Time treshold</string>
    <string name="settings_automeasurement_treshold_time_summary">Automatic measurement will be started after this time</string>
    <string name="settings_automeasurement_treshold_time_dialog_title">Time treshold in minutes</string>
    <string name="settings_automeasurement_treshold_time_dialog_message">Time treshold is useful when you stay long time at the same location (e.g. at home, office etc.)</string>
    <string name="settings_automeasurement_treshold_movement">Movement treshold</string>
    <string name="settings_automeasurement_treshold_movement_summary">Automatic measurement will be started when you move</string>
    <string name="settings_automeasurement_treshold_movement_dialog_title">Movement treshold in meters</string>
    <string name="settings_automeasurement_treshold_movement_dialog_message">Movement treshold is useful when you change your location frequently. It helps you to automatically test areas of your movement.</string>
    <string name="custom_measurement_measurement_server">Pick measurement server</string>
    <string name="custom_measurement_protocols_title">Available protocols on server</string>
    <string name="custom_measurement_cycles_title">Number of cycles:</string>
    <string name="custom_measurement_cycles_description">Number of cycles has an influence on the traffic, which will be generated. Please consider higher number of cycles only if you have an unlimited data plan! If you set number of cycles to 5, then the measurement will be repeated 5 times.</string>
    <string name="custom_measurement_location_title">Location of measurement</string>
    <string name="custom_measurement_location_retrieving">Searching for location. Location will enable you to view your results on the map.</string>
    <string name="custom_measurement_start_button">Start measurement</string>
</resources>